# Merge-Magik

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Common.h  main.cpp
